<resources>
    <string name="app_name">Dicoding</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_finished">Finished</string>
    <string name="search_hint">Cari</string>
    <string name="home_greetings">Hi Coders!</string>
    <string name="home_desc">Temukan event Dicoding yang menarik</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="carousel_item_image_desc">carousel item image</string>
    <string name="finished_events">Finished Events</string>
    <string name="see_details">See Details</string>
    <string name="image_event_card_item">image_event_card_item</string>
    <string name="finished_desc">Jelajahi event yang telah terlaksana</string>
    <string name="upcoming_desc">Ikutlah berpartisipasi dalam event Dicoding</string>
    <string name="detail_image">Detail Image</string>
    <string name="arrow_back_icon">Arrow Back Icon</string>
    <string name="event_details">Event Details</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remaining_quota">Remaining quota:</string>
    <string name="register">Register</string>
    <string name="no_data">No Data</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="favorite_title">Favorite Events</string>
    <string name="favorite_desc">Jelajahi event-event favorite Anda</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="enable_dark_mode">Enable dark mode</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="enable_notification">Enable notification</string>
</resources>