<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_upcoming"
        android:icon="@drawable/ic_upcoming_black"
        android:title="@string/title_upcoming" />

    <item
        android:id="@+id/navigation_finished"
        android:icon="@drawable/ic_finished_black"
        android:title="@string/title_finished" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />

</menu>