<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.raflis.final_submission_1_android_fundamental.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_navigation_home_to_eventDetailsFragment"
            app:destination="@id/eventDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.raflis.final_submission_1_android_fundamental.ui.upcoming.UpcomingFragment"
        android:label="@string/title_upcoming"
        tools:layout="@layout/fragment_upcoming" >

        <action
            android:id="@+id/action_navigation_home_to_eventDetailsFragment"
            app:destination="@id/eventDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.raflis.final_submission_1_android_fundamental.ui.finished.FinishedFragment"
        android:label="@string/title_finished"
        tools:layout="@layout/fragment_finished" >

        <action
            android:id="@+id/action_navigation_home_to_eventDetailsFragment"
            app:destination="@id/eventDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/eventDetailsFragment"
        android:name="com.raflis.final_submission_1_android_fundamental.ui.event_details.EventDetailsFragment"
        android:label="fragment_event_details"
        tools:layout="@layout/fragment_event_details" >
        <argument
            android:name="event"
            app:argType="com.raflis.final_submission_1_android_fundamental.data.local.entity.Event"
            app:nullable="true" />
        <argument
            android:name="favoriteEvent"
            app:argType="com.raflis.final_submission_1_android_fundamental.data.local.entity.FavoriteEvent"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.raflis.final_submission_1_android_fundamental.ui.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_navigation_home_to_eventDetailsFragment"
            app:destination="@id/eventDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.raflis.final_submission_1_android_fundamental.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings"/>

</navigation>