<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/tv_settings_title"
        style="@style/TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:viewBindingIgnore="true" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_settings_title"
        app:layout_constraintStart_toStartOf="@id/tv_settings_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_marginHorizontal="15dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_settings_dark_mode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/dark_mode"
                style="@style/TextHeading1"/>

            <TextView
                android:id="@+id/tv_settings_dark_mode_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/tv_settings_dark_mode"
                app:layout_constraintTop_toBottomOf="@id/tv_settings_dark_mode"
                android:text="@string/enable_dark_mode"
                android:textColor="@color/gray"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/sm_dark_mode"
                android:layout_width="100dp"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_settings_dark_mode"
                app:layout_constraintBottom_toBottomOf="@id/tv_settings_dark_mode_desc"
                />

            <TextView
                android:id="@+id/tv_settings_notification"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="@id/tv_settings_dark_mode"
                app:layout_constraintTop_toBottomOf="@id/tv_settings_dark_mode_desc"
                android:text="@string/daily_reminder"
                style="@style/TextHeading1"/>

            <TextView
                android:id="@+id/tv_settings_notification_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/tv_settings_notification"
                app:layout_constraintTop_toBottomOf="@id/tv_settings_notification"
                android:text="@string/enable_notification"
                android:textColor="@color/gray"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/sm_daily_reminder"
                android:layout_width="100dp"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_settings_notification"
                app:layout_constraintBottom_toBottomOf="@id/tv_settings_notification_desc"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>