<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.event_details.EventDetailsFragment">

    <ImageView
        android:id="@+id/iv_back_event_details"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/arrow_back_icon"
        android:src="@drawable/ic_arrow_back_black"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/tv_event_details_title"
        style="@style/TextHeading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/event_details"
        tools:ignore="RelativeOverlap" />

    <ImageView
        android:id="@+id/iv_favorite_event_details"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:contentDescription="@string/favorite"
        android:src="@drawable/selector_favorite"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        android:layout_above="@+id/btn_register_event_details"
        android:layout_below="@id/iv_back_event_details"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcv_image_event_detail"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeWidth="0dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/iv_image_event_detail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/image_event_card_item"
                    android:scaleType="centerCrop"
                    tools:src="@tools:sample/backgrounds/scenic" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tv_owner_event_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mcv_image_event_detail" />

            <TextView
                android:id="@+id/tv_name_event_details"
                style="@style/TextTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/mcv_image_event_detail"
                app:layout_constraintStart_toStartOf="@id/tv_owner_event_details"
                app:layout_constraintTop_toBottomOf="@id/tv_owner_event_details" />

            <TextView
                android:id="@+id/tv_remaining_quota_event_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/remaining_quota"
                app:layout_constraintStart_toStartOf="@id/tv_owner_event_details"
                app:layout_constraintTop_toBottomOf="@id/tv_name_event_details" />

            <TextView
                android:id="@+id/tv_remaining_quota_data_event_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/tv_remaining_quota_event_details"
                app:layout_constraintStart_toEndOf="@id/tv_remaining_quota_event_details"
                app:layout_constraintTop_toTopOf="@id/tv_remaining_quota_event_details" />

            <TextView
                android:id="@+id/tv_time_event_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_remaining_quota_event_details"
                app:layout_constraintEnd_toEndOf="@id/mcv_image_event_detail"
                app:layout_constraintTop_toTopOf="@id/tv_remaining_quota_event_details" />

            <TextView
                android:id="@+id/tv_desc_event_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="@id/mcv_image_event_detail"
                app:layout_constraintStart_toStartOf="@id/tv_owner_event_details"
                app:layout_constraintTop_toBottomOf="@id/tv_time_event_details" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_register_event_details"
        android:layout_width="300dp"
        android:layout_marginVertical="10dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/register" />

</RelativeLayout>
