<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.upcoming.UpcomingFragment">

    <TextView
        android:id="@+id/tv_upcoming_title"
        style="@style/TextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/upcoming_events"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:viewBindingIgnore="true" />

    <TextView
        android:id="@+id/tv_upcoming_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/upcoming_desc"
        app:layout_constraintStart_toStartOf="@id/tv_upcoming_title"
        app:layout_constraintTop_toBottomOf="@id/tv_upcoming_title"
        tools:viewBindingIgnore="true" />

    <ProgressBar
        android:id="@+id/progress_bar_upcoming"
        style="?android:attr/progressBarStyle"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginVertical="20dp"
        android:indeterminateTint="@color/primary"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_upcoming_desc"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_upcoming"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        android:clipToPadding="false"
        android:paddingBottom="180dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_upcoming_desc" />


    <TextView
        android:id="@+id/tv_not_upcoming_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_data"
        android:textColor="@color/gray"
        android:visibility="gone"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_upcoming_desc"
        />

</androidx.constraintlayout.widget.ConstraintLayout>