<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.search.SearchBar
            android:id="@+id/search_bar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/search_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_search_primary"
            app:navigationIconTint="@color/primary" />

        <com.google.android.material.search.SearchView
            android:id="@+id/search_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/search_hint"
            app:backgroundTint="@color/card_background"
            app:layout_anchor="@id/search_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_not_found"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_data"
                android:textColor="@color/gray"
                android:visibility="visible"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                />

            <ProgressBar
                android:id="@+id/progress_bar_search"
                style="?android:attr/progressBarStyle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginVertical="20dp"
                android:indeterminateTint="@color/primary"
                android:layout_gravity="center"
                android:visibility="gone"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_search_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingBottom="180dp"/>

        </com.google.android.material.search.SearchView>

        <TextView
            android:id="@+id/tv_home_greetings"
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/home_greetings"
            app:layout_constraintBottom_toBottomOf="@id/search_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/search_bar"
            tools:viewBindingIgnore="true" />

        <TextView
            android:id="@+id/tv_home_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_desc"
            app:layout_constraintStart_toStartOf="@id/tv_home_greetings"
            app:layout_constraintTop_toBottomOf="@id/tv_home_greetings"
            tools:viewBindingIgnore="true" />

        <TextView
            android:id="@+id/tv_home_upcoming"
            style="@style/TextHeading1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="@string/upcoming_events"
            app:layout_constraintStart_toStartOf="@id/tv_home_greetings"
            app:layout_constraintTop_toBottomOf="@id/tv_home_desc" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_home_upcoming"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_home_upcoming" />

        <ProgressBar
            android:id="@+id/progress_bar_upcoming_home"
            style="?android:attr/progressBarStyle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginVertical="20dp"
            android:indeterminateTint="@color/primary"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_home_upcoming"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_not_upcoming_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:textColor="@color/gray"
            android:visibility="gone"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_home_upcoming"
            />

        <TextView
            android:id="@+id/tv_home_finished"
            style="@style/TextHeading1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="@string/finished_events"
            app:layout_constraintStart_toStartOf="@id/tv_home_greetings"
            app:layout_constraintTop_toBottomOf="@id/rv_home_upcoming" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_home_finished"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingBottom="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_home_finished"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ProgressBar
            android:id="@+id/progress_bar_finished_home"
            style="?android:attr/progressBarStyle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginVertical="20dp"
            android:indeterminateTint="@color/primary"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_home_finished"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_not_finished_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:textColor="@color/gray"
            android:visibility="gone"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_home_finished"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>